# codingjam-glow-up

./: engineering.md  product.md  ui.md
.agents/skills/: eng-design-doc  gemini-api-dev  gemini-interactions-api  gemini-live-api-dev  pm-design-doc  ux-design-doc
backend/: main.py  pyproject.toml
backend/tests/: test_main.py
frontend/: app.js  index.html  style.css
