[project]
name = "hairstyle-tryon-backend"
version = "0.1.0"
description = "AI Hairstyle Try-On App Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.18",
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
    "pillow>=11.0.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
